--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	
+	<header>
+		<h1>Шапка проекта</h1>
+		<div class="nav"></div>
+		<div class="phone"></div>
+		<div class="descr"></div>
+	</header>
 </body>
 </html>
