--- a/index.html
+++ b/index.html
@@ -8,17 +8,9 @@
 </head>
 <body>
 
-	<header>
-		<h1>Шапка проекта</h1>
-		<div class="nav"></div>
-		<div class="phone"></div>
-		<div class="descr"></div>
-	</header>
-
-	<div class="section content">
-		<div class="content__item"></div>
-		<div class="content__descr"></div>
-	</div>
+<footer class="footer">
+	<h1>подвал сайта</h1>
+</footer>
 
 </body>
 </html>
